--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <body>
 
     <div class="nav-bar"></div>
@@ -9,7 +10,10 @@
     <div id="app">
         <div class="product">
             <div class="product-image">
-                <img v-bind:src="image" alt="">
+                <img    v-bind:src="image" 
+                        height="600px" 
+                        width="600px"
+                >
             </div>
 
             <div class="product-info">
