--- a/index.html
+++ b/index.html
@@ -3,32 +3,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
+    <link type="text/css" rel="stylesheet" href="//unpkg.com/bootstrap/dist/css/bootstrap.min.css"/>
+    <link type="text/css" rel="stylesheet" href="//unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.css"/>
+</head>
 <body>
-
-    <div class="nav-bar"></div>
-
     <div id="app">
-        <div class="product">
-            <div class="product-image">
-                <img    v-bind:src="image" 
-                        height="600px" 
-                        width="600px"
-                >
-            </div>
+        <div class="container">
+            <div class="product">
+                <div class="product-image">
+                    <img v-bind:src="image" 
+                         height="300px" 
+                         width="300px">
+                </div>
 
-            <div class="product-info">
-                <h1>{{ product }}</h1>
-                <p v-if="onSale">On Sale!</p>
-                <!-- <p v-show="inStock">In Stock</p> -->
-                <!-- <p v-if="inStock">In Stock</p> -->
-                <!-- <p v-if="inventory > 10">In Stock</p>
-                <p v-else-if="inventory <= 10 && inventory > 0">Almost sold out!</p>
-                <p v-else>Out of Stock</p> -->
-            </div>
-        </div>
+                <div class="product-info">
+                    <h1>{{ product }}</h1>
+                    <p v-if="onSale">On Sale!</p>
+                    <ul>
+                        <li v-for="detail in details">{{ detail }}</li>
+                    </ul>
+
+                    <div v-for="variant in variants">
+                        <p>{{ variant.variantColor }}</p>
+                    </div>
+                </div>
+            </div> <!-- end product -->
+        </div> <!-- end container -->
     </div>
 
+
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-    <script src="main.js"></script>
+    <!-- Add this after vue.js -->
+    <script src="https://unpkg.com/babel-polyfill@latest/dist/polyfill.min.js"></script>
+    <script src="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.js"></script>
+
+    <script src="main.js"></script>    
 </body>
 </html>
