--- a/index.html
+++ b/index.html
@@ -11,23 +11,31 @@
     <div id="app">
         <div class="container">
             <div class="product">
-                <div class="product-image">
-                    <img v-bind:src="image" 
-                         height="300px" 
-                         width="300px">
-                </div>
-
-                <div class="product-info">
-                    <h1>{{ product }}</h1>
-                    <p v-if="onSale">On Sale!</p>
-                    <ul>
-                        <li v-for="detail in details">{{ detail }}</li>
-                    </ul>
-
-                    <div v-for="variant in variants">
-                        <p>{{ variant.variantColor }}</p>
+                <div class="row">
+                    <div class="product-image">
+                        <img v-bind:src="image" 
+                            height="300px" 
+                            width="300px">
                     </div>
-                </div>
+
+                    <div class="product-info">
+                        <h1>{{ product }}</h1>
+                        <p v-if="onSale">On Sale!</p>
+                        <ul>
+                            <li v-for="detail in details">{{ detail }}</li>
+                        </ul>
+
+                        <div v-for="variant in variants">
+                            <p @mouseover="updateProduct(variant.variantImage)">{{ variant.variantColor }}</p>
+                        </div>
+
+                        <button class="btn-primary" v-on:click="addToCart">Add to Cart</button>
+                        <div class="cart">
+                            <p>Cart{{cart}}</p>
+                        </div>
+
+                    </div>
+                </div> <!-- end row --> 
             </div> <!-- end product -->
         </div> <!-- end container -->
     </div>
